--- a/gemfile
+++ b/gemfile
@@ -26,6 +26,7 @@ group :jekyll_plugins do
     gem 'kramdown'
     gem 'rouge'
     gem 'jekyll-sitemap'
+	gem 'jekyll-include-cache'
     # gem 'jekyll-minifier'
     # gem 'html-proofer'
 
