--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Friends of Kyrgyzstan
 subtitle: A place to connect with others who love Kyrgyzstan.
 
-url: "https://www.friendsofkyrgyzstan.org/"
+url: "https://www.friendsofkyrgyzstan.org"
 google-analytics: UA-12358141-35
 
 sass:
