--- a/_config.yml
+++ b/_config.yml
@@ -168,3 +168,27 @@ compress_html:
   blanklines: false 
   ignore: 
     envs: []
+
+cloudinary:
+  cloud_name: friendsofkyrgyzstan
+  verbose: false
+  presets:
+    default:
+      min_width: 320
+      max_width: 1600
+      fallback_max_width: 800
+      steps: 5
+      sizes: '(min-width: 50rem) 50rem, 90vw'
+      figure: always
+      attributes:
+        class: "img-fluid"
+        loading: "lazy"
+    logo:
+      min_width: 80
+      max_width: 400
+      fallback_max_width: 200
+      steps: 3
+      sizes: '(min-width: 50rem) 13rem, (min-width: 40rem) 25vw, 45vw'
+      figure: never
+      attributes:
+        class: logo
