--- a/_config.yml
+++ b/_config.yml
@@ -174,12 +174,12 @@ cloudinary:
   verbose: false
   presets:
     default:
-      min_width: 320
-      max_width: 1600
-      fallback_max_width: 800
-      steps: 5
+      min_width: 290
+      max_width: 690
+      fallback_max_width: 690
+      steps: 4
       sizes: '(min-width: 50rem) 50rem, 90vw'
-      figure: always
+      figure: auto
       attributes:
         class: "img-fluid"
         loading: "lazy"
