--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Jekyll stuff
-.jekyll-cache
-.sass-cache
-.jekyll-metadata
-/_site/
+.jekyll-cache/
+.sass-cache/
+.jekyll-metadata/
+_site/
 Gemfile.lock
