--- a/_data/grants-past.yaml
+++ b/_data/grants-past.yaml
@@ -1,52 +1,70 @@
 - project: School Renovation Project 
   first: Tammi
   last: Spicer
+  email: tspicer@gladstone.uoregon.edu
   year: 2005
   amount: 500
   description: This is a description 
 - project: "Kind Family Children Home Farm Equipment Purchase"
   first: Brenda
   last: Parker
+  email: 
   year: 2007
   amount: 500
   description: The project was for the purchase of farm equipment for an orphanage so they could grown subsistence crops.
 - project: Talas Tractor Project
   first: John
   last: Cervetto
+  email: jwcervetto@gmail.com
   year: 2009
   amount: 1000
   description:  Talas is the bean cultivation kingdom of Kyrgyzstan.  Bean are referred to by the locals as Ak Altin (white gold).  The school owns 3.5 hectares of land but has no means to develop it for bean cultivation.  The school needs a tractor, trailer, and plough to raise beans and then use the profits to purchase staples such as soap, lightbulbs, and medicine. The tractor will also be rented to community members and proceeds from that will be used to for fuel and maintanece of the tractor.
 - project: Training for Trainers
   first: Meghan
   last: O'Connell
+  email: meghan.oconnell39@gmail.com
   year: 2012
   amount: 755.83 
   description: There will be two ToTs this fall, both for 20 PCV/CP teams, one will train the trainers in how to conduct a nutrition club for young women/new moms. The second will focus on the same target audience, but train the trainers how to hold fitness clubs in their communities. Ideally, this will turn into an annual series of trainings. To kick off the first year of the Fitness Education ToT, the third day of the training will be a 5k/10k race at the Cholpon-Ata Hippodrome to raise awareness about the importance of physical fitness in maintaining healthy lifestyles.  JICA recently held an international friendship marathon in Cholpon-Ata and the local turnout was impressive.  We're hoping to have the same success, though on a smaller scale, with our run!
 - project: Grozd Village School and Community fitness Room
   first: John 
   last: Amanda
+  email: acantono29@gmail.com
   year: 2015
   amount: 2000
   description: Renovated a classroom as a gym space for women and children 
 - project: Caravan of Knowledge
   first: Kelly
   last: Oberlin
+  email: koberlin21@gmail.com
   year: 2015
   amount: 
   description: Business, financial, and employability training for youth ages 14 to 27 - the trainings are going to be offered in various locations throughout Kyrgyzstan. 
 - project: Arashan Project 
   first: Sterling
   last: Garnett
+  email: saga49pc@gmail.com
   year: 2015
   amount: 
   description: Grant will pay for new oxford family and friends text books for students as well as teach training. 
-- project: Disability Training
-  first: Allysa 
-  last: Schimler 
+- project: Medical supplies (baby scale) 
+  first: Stephanie
+  last: Wolodkin
+  email: sewolodkin@gmail.com
+  year: 2015
+  amount: 500
+  description: Providing new clean bedding/blankets for medical center as well as a new baby scale
+- project: Mental Health Training and working with students with disabilities.
+  first: Allysa
+  last: Schmirler
+  email: schmialy@gmail.com
   year: 2016
-  amount: 
-  description: 
-
-
-
-
+  amount: 600
+  description: Teach basic mental health and counseling techniques incluing active listening, confidentiality, and conflict resolution.  The courses will also teach basics of helping students with disabilities.
+- project: Teacher Resources in Kochkor
+  first: DeAnna
+  last:  Heindel
+  email: deannaheindel@yahoo.com
+  year: 2016
+  amount: 500
+  description: Kochkor Raiono Methodology Center will purchase print resources and a color printer to better disseminate materials.
